[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/core/ui/station_menu/station_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=2]

[node name="StationMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.5 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 15

[node name="LabelStationName" type="Label" parent="Panel/VBoxContainer"]
margin_right = 360.0
margin_bottom = 27.0
text = "Station Name"
align = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 42.0
margin_right = 360.0
margin_bottom = 46.0

[node name="LabelInfo" type="Label" parent="Panel/VBoxContainer"]
margin_top = 61.0
margin_right = 360.0
margin_bottom = 88.0
text = ""
align = 1

[node name="BtnTrade" type="Button" parent="Panel/VBoxContainer"]
margin_top = 103.0
margin_right = 360.0
margin_bottom = 153.0
rect_min_size = Vector2( 0, 50 )
text = "Trade (coming soon)"

[node name="BtnContracts" type="Button" parent="Panel/VBoxContainer"]
margin_top = 168.0
margin_right = 360.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 50 )
text = "Contracts (coming soon)"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 233.0
margin_right = 360.0
margin_bottom = 237.0

[node name="BtnUndock" type="Button" parent="Panel/VBoxContainer"]
margin_top = 252.0
margin_right = 360.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 50 )
text = "Undock"
